# p2r-tests

./: .gitmodules  CMakeLists.txt  Makefile  README.md  build-dpl.sh  build-pstl-accessors.sh  build-pstl-native.sh  build.py  build_cudav3.sh  build_pstl.sh  make.sh  propagate-toz-test_pstl.cpp  read_throughput.py
archived-src/: build-pstl-accessors.sh  build-sycl-esimd.sh  build_cuda.sh  propagate-tor-test_cuda_hybrid_accessors.cpp
include/: cudaCheck.h  hipCheck.h
notebooks/: JLSE.ipynb  p2z.ipynb
p2r_alpaka/: CMakeLists.txt
p2r_alpaka/src/: propagate-tor-test_alpaka.cpp  propagate-tor-test_alpaka_local.cpp
src/: propagate-tor-test_acc.v3.cpp  propagate-tor-test_cuda.cu  propagate-tor-test_cuda_accessors.cu  propagate-tor-test_cuda_hybrid.cpp  propagate-tor-test_cuda_hybrid_accessors.cpp  propagate-tor-test_cuda_hybrid_cpp2x.cpp  propagate-tor-test_cuda_hybrid_mdspan.cpp  propagate-tor-test_cuda_hybrid_native.cpp  propagate-tor-test_cuda_native.cu  propagate-tor-test_cuda_uvm.cu  propagate-tor-test_cuda_v2.cu  propagate-tor-test_cuda_v3.cu  propagate-tor-test_cuda_v4.cu  propagate-tor-test_cuda_v5.cu  propagate-tor-test_cuda_v6.cu  propagate-tor-test_dpl.cpp  propagate-tor-test_dpl_async.cpp  propagate-tor-test_hip.cu  propagate-tor-test_hip_local.cu  propagate-tor-test_kokkos.cpp  propagate-tor-test_kokkos_local.cpp  propagate-tor-test_kokkos_local_tvr.cpp  propagate-tor-test_nvcpp_hybrid.cpp  propagate-tor-test_pstl.cpp  propagate-tor-test_pstl_accessors.cpp  propagate-tor-test_pstl_native.cpp  propagate-tor-test_pstl_ranges.cpp  propagate-tor-test_pstl_static.cpp  propagate-tor-test_pstl_v2.cpp  propagate-tor-test_pstl_v3.cpp  propagate-tor-test_pstl_v4.cpp  propagate-tor-test_pstl_v5.cpp  propagate-tor-test_sycl.cpp  propagate-tor-test_sycl_esimd.cpp  propagate-tor-test_sycl_hybrid.cpp  propagate-tor-test_tbb.cpp
